# Portfolio

./: .gitignore  AI & D.rar  Car.cpp  Car.hpp  smmAPI.py  smmAPI.txt
.github/workflows/: ci.yml
AI & D/: LL.cpp
AI & D/LinkedList/: LL.cpp  LL.ilk
AI & D/Trees/: binarysearchtree.cpp  binarytrees.cpp
BookExample/: Car.cpp  Car.hpp  Main.cpp
BookExample/A Class Hierarchy/: Person.cpp  Person.hpp  Student.cpp  Student.hpp
CSPPlugin/: CSPPlugin.sln
CSPPlugin/src/: CSPApplication.cs  CSPPlugin.cs  CSPPlugin.csproj
Databank/DataBank/: CMakeLists.txt
Databank/build-DataBank-Desktop_Qt_6_7_2_MSVC2019_64bit-Debug/: CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
Hardware/sketch_jul03c/: sketch_jul03c.ino
Qt/build-qthell0o-Desktop_Qt_6_4_1_MinGW_64_bit-Debug/: CMakeCache.txt  build.ninja  cmake_install.cmake
Qt/qthell0o/: CMakeLists.txt
ReplayBuffer/: clippingScrpt.py
TaskManagerCLI xcode/TaskManagerCLI/: Main.cpp  Task.cpp  Task.h  TaskManager.cpp  TaskManager.hpp  TaskRepository.cpp  tasks.txt
TaskManagerCLI xcode/TaskManagerCLI.xcodeproj/: project.pbxproj
TaskManagerCLI xcode/testTaskManagerCLI/: testTask.cpp
TaskManagerCLI/TaskManagerCLI/tests/: CMakeLists.txt  TaskManagerTest.cpp  TaskTest.cpp
TaskManagerCLI/TaskManagerCLI/tests/mocks/: MockRepository.hpp
clipmail-extension/: Tesseract.js  background.js  bundle.js  manifest.json  ocr.js  package-lock.json  package.json  popup.css  popup.html  popup.js
spotifychrome/: background.js  content_script.js  manifest.json  popup.html  popup.js
(+310 files in other folders)
